deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: math-api
  labels:
    app: math-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: math-api
  template:
    metadata:
      labels:
        app: math-api
    spec:
      containers:
        - name: math-api
          image: ghcr.io/betodalas/teste-sre-roberto:latest
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
